fixes fixedLayout bugs

--- a/app/stylesheets/shared/feature_switching.css.sass
+++ b/app/stylesheets/shared/feature_switching.css.sass
@@ -1,5 +1,6 @@
 #feature-switching
   position: absolute
+  z-index: 10
   right: 0
   font-family: Helvetica
   a.feature-panel-toggle
